--- a/Lab02/Makefile
+++ b/Lab02/Makefile
@@ -23,5 +23,12 @@ test.o: test.S
 # Compile for best debug view (lowest optimization)
 	$(CC) $(FLAGS) -c $^ -o $@
 
-$(TARGET): main.o test.o
-	$(LD) main.o test.o -o $@
+lab02c.o: lab02c.S
+	$(CC) $(FLAGS) -c $^ -o $@
+
+lab02d.o: lab02d.S
+	 $(CC) $(FLAGS) -c $^ -o $@
+
+
+$(TARGET): main.o test.o lab02c.o lab02d.o
+	$(LD) main.o test.o lab02c.o lab02d.o  -o $@
