--- a/Lab05/Lab05a/Makefile
+++ b/Lab05/Lab05a/Makefile
@@ -23,5 +23,10 @@ test.o: test.S
 # Compile for best debug view (lowest optimization)
 	$(CC) $(FLAGS) -c $^ -o $@
 
-$(TARGET): main.o test.o
-	$(LD) main.o test.o -o $@
+
+test2.o: test2.S
+# Compile for best debug view (lowest optimization)
+	$(CC) $(FLAGS) -c $^ -o $@
+
+$(TARGET): main.o test2.o test.o
+	$(LD) main.o test2.o test.o -o $@
